<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_theme"
        android:title="@string/menu_theme">
        <menu>
            <item android:id="@+id/menu_theme_light"
                android:title="@string/menu_theme_light" />
            <item android:id="@+id/menu_theme_dark"
                android:title="@string/menu_theme_dark" />
        </menu>
    </item>

    <item android:id="@+id/menu_language"
        android:title="@string/menu_language">
        <menu>
            <item android:id="@+id/menu_lang_fr"
                android:title="@string/menu_lang_fr" />
            <item android:id="@+id/menu_lang_en"
                android:title="@string/menu_lang_en" />
        </menu>
    </item>

    <item android:id="@+id/menu_quit"
        android:title="@string/menu_quit"
        app:showAsAction="never" />
</menu>
